refactor: Custom Exception 생성